--- a/Python/Qgis/GPX 3D/Auxiliars/window.ui
+++ b/Python/Qgis/GPX 3D/Auxiliars/window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>437</width>
-    <height>300</height>
+    <width>484</width>
+    <height>449</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -64,7 +64,7 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>50</x>
      <y>130</y>
      <width>121</width>
      <height>24</height>
@@ -77,11 +77,60 @@
   <widget class="QTextEdit" name="textEdit">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>180</y>
+     <x>20</x>
+     <y>320</y>
      <width>421</width>
      <height>111</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBox">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>130</y>
+     <width>131</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>Paso Malla 25m</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Paso Malla 200m</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Paso Malla 500m</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Paso Malla 1.00m</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>170</y>
+     <width>401</width>
+     <height>141</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../2019_E6_V8.jpg</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
